# django-tenant-core

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
docs/: first-push.md  install.md
tenant_core/: __init__.py  admin.py  apps.py  context.py  decorators.py  exceptions.py  middleware.py  mixins.py  models.py  permissions.py
tenant_core/management/commands/: create_tenant.py  setup_staff_groups.py
